# Migration-model

./: .gitignore  README.md  migration_map_py.html  pyproject.toml
data/: df_C_2023_07_20-07_56_07.pkl  fold1_ensemble_model_C_2022_11_20-10_23_56.pkl  fold1_sample_dataframes_2022_11_02-02_54_03.pkl  fold1_state_model_C_2022_11_20-10_23_56.pkl  fold2_sample_dataframes_2022_11_02-02_54_05.pkl
geolayers/: Ленинградская область.geojson
migration/: config.py  data_fetching.py  data_loading.py  data_processing.py  main.py  metrics.py  model_predictions.py  model_training.py  train.py  validation.py  visualization.py
