[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "migration-model"
version = "0.1.0"
description = "Population migration prediction system"
authors = ["Bashirov Roman <bashiroff.roman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
pandas = "^1.5.3"
numpy = "^1.26.4"
geopandas = "^1.0.1"
osmnx = "^2.0.1"
folium = "^0.19.5"
joblib = "^1.4.2"
networkx = "^3"
branca = "^0.8.1"
geopy = "^2.4.1"
matplotlib = "^3.10.1"
shapely = "^2.0.7"
pyproj = "^3.7.1"
